# little_cnn

./: .gitignore  CMakeLists.txt  Data.h  README.md  common.h  header.h  little_cnn.sln  little_cnn.vcxproj  main.cpp  mnist_loader.cpp  plot.h
